- (BUGF) ensure if virt bridge is set to "" it will apply the value from settings
- (BUGF) cobbler check should say path to config file is /etc/cobbler, not /var/lib
- (FEAT) enable cobblerweb username/pass logins when authing with spacewalk
- (BUGF) allow --kopts to take parameters that are shell quoted.
- (BUGF) allow kernel options to start with '-'

- XXX - 1.4.2
- (BUGF) fix WTI power templates
- (FEAT) add WTI power type
- (BUGF) remove Python 2.6/3000 warnings
- (BUGF) fix typo in network template (DNS enumeration)
- (BUGF) make buildiso work for systems that are using bonding
- (BUGF) blending fix for --template-files
- (BUGF) cobbler check ignores comments in TFTP config
- (BUGF) fix image type field editing in the webapp
- (BUGF) allow deletion of eth0 if other interfaces are present
- (BUGF) fix server-override setting in CLI for profile objects
- (BUGF) systems and profiles are now sorted for "cobbler buildiso"
- (BUGF) ensure that directories exist when installing a template file
- (BUGF) fix for typo in network config snippet
- (BUGF) fix for func integration script (should overwrite config, not append)
- (BUGF) append nameservers and gateway, if set, for buildiso 

- Fri Jan 09 2009 - 1.4.1
- (BUGF) Cobbler check looks for right httpd on SUSE
- (BUGF) post_install_network_config snippet had bash errors
- (BUGF) don't run restorecon programatically
- (FEAT) have cobbler check mention when semanage rules should be applied
- (BUGF) fix an obscure xmlrpclib corner case where a string that looks like an int can't be served because xmlrpclib thinks it's an int.  Applies to XMLRPC consumers only, not CobblerWeb or the cobbler CLI.
- (BUGF) fix external kickstart URLs (not templated) and per-system overrides.
- (BUGF) fix 'cobbler check' code for SuSE services
- (FEAT) batch editing on the system page.

- Fri Dec 19 2008 - 1.4
- (----) Stable release of 1.3 development branch

- Fri Dec 19 2008 - 1.3
- (FEAT) ACLs to extend authz (see Wiki)